gitignore a folder "private"

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Index/
 exquisite-corpse.inform/Metadata.iFiction
 exquisite-corpse.inform/manifest.plist
 exquisite-corpse.inform/Skein.skein
+private
